--- a/password_manager_electron/password_manager/package.json
+++ b/password_manager_electron/password_manager/package.json
@@ -37,6 +37,7 @@
     "solid-app-router": "^0.4.2",
     "solid-js": "^1.8.17",
     "solid-toast": "^0.5.0",
-    "toaster-js": "^2.2.3"
+    "toaster-js": "^2.2.3",
+    "toastify-js": "^1.12.0"
   }
 }
